# rex

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: SECURITY.md
.github/actions/setup-rust/: action.yml
.github/scripts/: publish_report.sh
.github/workflows/: daily_reports.yml  main_docker_publish.yml  pr_lint_gha.yml  pr_lint_pr_title.yml  pr_main.yml  pr_main_cli.yml  pr_main_sdk.yml  tag_release.yaml
cli/: Cargo.toml  README.md
cli/src/: cli.rs  common.rs  lib.rs  main.rs  utils.rs
cli/src/commands/: autocomplete.rs  config.rs  info.rs  l2.rs  mod.rs  prove.rs  wallet.rs
cli/tests/: tests.rs
sdk/: .gitignore  Cargo.toml
sdk/examples/: deploy_contract_with_keystore.rs  simple_usage.rs
sdk/examples/contracts/: recoverSigner.sol
sdk/examples/keystore/: main.rs
sdk/examples/keystore/contracts/: RecoverSigner.sol
sdk/src/: calldata.rs  create.rs  errors.rs  keystore.rs  sdk.rs  sign.rs  utils.rs
sdk/src/client/: mod.rs
sdk/src/client/auth/: config.rs  mod.rs
sdk/src/client/eth/: clients.rs  errors.rs  eth_sender.rs  mod.rs  signer.rs
sdk/src/l2/: constants.rs  deposit.rs  l1_to_l2_tx_data.rs  merkle_tree.rs  mod.rs  withdraw.rs
sdk/tests/: tests.rs
